<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/walpaper"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/audiowide"
                android:gravity="center"
                android:text="@string/about_us"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/aboutusdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTintMode="src_in"
                android:fontFamily="@font/baumans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/aboutus"
                android:textColor="@color/pressed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vast_shadow"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/vision"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/visiondesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/visiondesc"
                android:textColor="@color/pressed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vast_shadow"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mission"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/missiondesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/missiondesc"
                android:textColor="@color/pressed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vast_shadow"
                android:padding="10dp"
                android:text="@string/clubhier"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/clubhierarchydesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/clubhierdesc"
                android:textColor="@color/pressed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vast_shadow"
                android:padding="10dp"
                android:text="@string/technologies"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/technologydesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/technologiesdesc"
                android:textColor="@color/pressed"
                android:textSize="18sp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:translationZ="5dp"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_addButtonColorPressed="@color/colorPrimaryDark"
        app:fab_addButtonPlusIconColor="#fff"
        app:fab_labelStyle="@style/customfab">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabcontactus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_addButtonSize="mini"
            app:fab_colorNormal="@color/normal"
            app:fab_colorPressed="@color/pressed"
            app:fab_icon="@drawable/ic_contact_phone_black_24dp"
            app:fab_title="Contact us" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabteam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_addButtonSize="mini"
            app:fab_colorNormal="@color/normal"
            app:fab_colorPressed="@color/pressed"
            app:fab_icon="@drawable/ic_people_black_24dp"
            app:fab_title="Team" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabgallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_addButtonSize="mini"
            app:fab_colorNormal="@color/normal"
            app:fab_colorPressed="@color/pressed"
            app:fab_icon="@drawable/ic_image_black_24dp"
            app:fab_title="Gallery" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabtechnofania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_addButtonSize="mini"
            app:fab_colorNormal="@color/normal"
            app:fab_colorPressed="@color/pressed"
            app:fab_icon="@drawable/ic_portrait_black_24dp"
            app:fab_title="Technofania'20" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabevents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_addButtonSize="mini"
            app:fab_colorNormal="@color/normal"
            app:fab_colorPressed="@color/pressed"
            app:fab_icon="@drawable/ic_event_note_black_24dp"
            app:fab_title="Events" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>